--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^7.1.0",
     "axios": "^1.9.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
